Set 'overflow-y' to 'overlay' for html element to prevent page widht changing while appearing/disappiaring a vertical scroll bar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,6 +47,7 @@ html {
   min-width: 1240px;
   position: relative;
   min-height: 100%;
+  overflow-y: overlay;
   -webkit-font-smoothing: antialiased
 }
 
